Fixed zoom slider not alignment with image magnifier in imageviewer.
:Release Notes:
Fixed zoom slider not alignment with image magnifier
in imageviewer.

:Detailed Notes:
Fixed zoom slider not alignment with image magnifier
in imageviewer.

:Testing Performed:
Locally tested

:QA Notes:
N/A

:Issues Addressed:
[WRN-4837]  Fix zoom slider not alignment with image
            magnifier in imageviewer.

Reviewed-on: http://gpro.lge.com/c/webosose/com.webos.app.imageviewer/+/314738
Tested-by: <p.dinesh@lge.com>
Tested-by: Anish Td <anish.td@lge.com>

--- a/src/components/PhotoPlayer/ZoomController/ZoomController.module.less
+++ b/src/components/PhotoPlayer/ZoomController/ZoomController.module.less
@@ -28,7 +28,15 @@
   }
   .zoomSlider {
     position: absolute;
-    bottom: 0.9rem;
+    bottom: 1rem;
     right: 4rem;
+    height: 8rem;
+    padding: 0.5rem;
+  }
+}
+
+.slider {
+  &.vertical {
+    height: 8rem;
   }
 }
